# CrisostomoCore

./: .gitignore  CMakeLists.txt  Readme.md  app.cpp  config.ini
App/: logs2024-11-26  main.py  requirements.txt  test.py
App/API/Controllers/: AuthorController.py  BookController.py  CategroyController.py  EditorialController.py  RenderConfigController.py  UserController.py
App/Application/: AuthorService.py  BookService.py  CategoryService.py  ConfigFrontService.py  EditorialService.py  UserService.py
App/Domain/: GlobalValues.py
App/Domain/Entity/: AppConfigRouteNavEntity.py  AuthorEntity.py  BookEntity.py  CategoryEntity.py  DownloadMediaEntity.py  DownloadTraceEntity.py  EditorialEntity.py  FavoriteTraceEntity.py  UserEntity.py  loginEntity.py
App/Domain/Exeptions/: ExecptionDAO.py  ExecptionEntity.py
App/Domain/Repository/: IAppConfigRouteNavReopository.py  IAuthorRepository.py  IBookRepository.py  ICategoryRepository.py  IEditorialRepository.py  IFavoriteTraceRepository.py  IUserRepository.py
App/Domain/Room/: Cipher.py  Logs.py  configAPP.py  configApp.conf
App/Domain/Values/: filterBookValues.py
App/Infrastructure/DAO/: AppConfigRouteNavDAO.py  AuthorDAO.py  AuthorTraceFavoriteDAO.py  BookDAO.py  CategoryDAO.py  EditorialDAO.py  EditorialTraceFavoriteDAO.py  UserDAO.py
App/Infrastructure/Providers/DB/: PsqlProvider.py  test.py
App/Test/: testCreateAuthors.py
Domain/: CMakeLists.txt
Domain/Entities/: EntityBase.hpp  UserEntity.hpp
Domain/Global/: ConfigValues.hpp  test.cpp
Domain/IDAO/: IUserDAO.hpp
Domain/Kernel/: ConfigReader.h  ConfigReaderHelper.cpp  ConfigReaderHelper.hpp  ConfigReaderRes.h  ConfigValues.hpp
Domain/Validators/: ValidatorsT.cpp  ValidatorsT.hpp
Infrastructure/: CMakeLists.txt
Infrastructure/Providers/: ConnectionRAII.hpp  Logs.hpp  StaticConnPsql.cpp  StaticConnPsql.hpp
config/: directoryGenerator.py
